5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4085/executions/1685_1949.log
== TEST (2019-04-24 19:24:39) 
-- CODE:
na = int(input("escreva o numero apostado: "))
ns = int(input("escreva o numero sorteado: "))
d1 = na // 10
d2 = na % 10 
d3 = ns //10
d4 = ns % 10
if (ns = na):
	print ("Ganhou R$ 100.000,00")
elif ((d4 == d1) and (d3 == d2)):
	print ("Ganhou R$ 50.000,00")
elif ((d1 == d3) or (d1 == d3) or (d2 == d3) or (d2 == d4)):
	print ("Ganhou R$ 1.000,00")
else:
	print ("Perdeu")
-- ERROR:
File "XXXX", line 7
    if (ns = na):
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 19:24:48) 
-- CODE:
na = int(input("escreva o numero apostado: "))
ns = int(input("escreva o numero sorteado: "))
d1 = na // 10
d2 = na % 10 
d3 = ns //10
d4 = ns % 10
if (ns == na):
	print ("Ganhou R$ 100.000,00")
elif ((d4 == d1) and (d3 == d2)):
	print ("Ganhou R$ 50.000,00")
elif ((d1 == d3) or (d1 == d3) or (d2 == d3) or (d2 == d4)):
	print ("Ganhou R$ 1.000,00")
else:
	print ("Perdeu")
-- OUTPUT:
Ganhou R$ 100.000,00
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 19:25:06) 
-- CODE:
na = int(input("escreva o numero apostado: "))
ns = int(input("escreva o numero sorteado: "))
d1 = na // 10
d2 = na % 10 
d3 = ns //10
d4 = ns % 10
if (ns == na):
	print ("Ganhou R$ 100.000,00")
elif ((d4 == d1) and (d3 == d2)):
	print ("Ganhou R$ 50.000,00")
elif ((d1 == d3) or (d1 == d3) or (d2 == d3) or (d2 == d4)):
	print ("Ganhou R$ 1.000,00")
else:
	print ("Perdeu")
-- OUTPUT:
Ganhou R$ 100.000,00
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 19:25:17) 
-- CODE:
na = int(input("escreva o numero apostado: "))
ns = int(input("escreva o numero sorteado: "))
d1 = na // 10
d2 = na % 10 
d3 = ns //10
d4 = ns % 10
if (ns == na):
	print ("Ganhou R$ 100.000,00")
elif ((d4 == d1) and (d3 == d2)):
	print ("Ganhou R$ 50.000,00")
elif ((d1 == d3) or (d1 == d3) or (d2 == d3) or (d2 == d4)):
	print ("Ganhou R$ 1.000,00")
else:
	print ("Perdeu")
-- OUTPUT:
Ganhou R$ 100.000,00
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 19:25:28) 
-- CODE:
na = int(input("escreva o numero apostado: "))
ns = int(input("escreva o numero sorteado: "))
d1 = na // 10
d2 = na % 10 
d3 = ns //10
d4 = ns % 10
if (ns == na):
	print ("Ganhou R$ 100.000,00")
elif ((d4 == d1) and (d3 == d2)):
	print ("Ganhou R$ 50.000,00")
elif ((d1 == d3) or (d1 == d3) or (d2 == d3) or (d2 == d4)):
	print ("Ganhou R$ 1.000,00")
else:
	print ("Perdeu")
-- EXECUTION TIME:
0.258199
-- TEST CASE 1:
---- input:
55
55
---- correct output:
Ganhou R$ 100.000,00
---- user output:
Ganhou R$ 100.000,00
-- TEST CASE 2:
---- input:
78
89
---- correct output:
Ganhou R$ 1.000,00
---- user output:
Ganhou R$ 1.000,00
-- TEST CASE 3:
---- input:
12
56
---- correct output:
Perdeu
---- user output:
Perdeu
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
